// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AccountVerificationScreen snapshot test should render correct ui for AccountVerificationScreen when verificationError is defined 1`] = `
<View
  onLayout={[Function]}
  style={
    Object {
      "backgroundColor": "#f6f6f6",
      "flex": 1,
      "width": 750,
    }
  }
>
  <RCTScrollView
    collapsable={false}
    contentContainerStyle={
      Object {
        "flex": 1,
      }
    }
    keyboardShouldPersistTaps="handled"
    onGestureHandlerEvent={[Function]}
    onGestureHandlerStateChange={[Function]}
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View>
      <BVLinearGradient
        colors={
          Array [
            4278819773,
            4278213285,
          ]
        }
        endPoint={
          Object {
            "x": 0,
            "y": 1.5,
          }
        }
        locations={
          Array [
            0,
            0.5,
          ]
        }
        startPoint={
          Object {
            "x": 0.1,
            "y": 0,
          }
        }
        style={
          Object {
            "backgroundColor": "#f6f6f6",
            "flex": 1,
            "width": 750,
          }
        }
      >
        <View
          style={
            Object {
              "flex": 1,
              "justifyContent": "space-between",
            }
          }
        >
          <View
            style={
              Object {
                "alignItems": "flex-end",
                "paddingTop": 33.5,
              }
            }
          >
            <View
              style={
                Object {
                  "overflow": "hidden",
                }
              }
            >
              <View
                accessible={true}
                focusable={true}
                onClick={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  Object {
                    "alignItems": "flex-end",
                    "justifyContent": "space-between",
                    "padding": 22.5,
                  }
                }
                testID="exit-button"
              >
                <View
                  style={
                    Object {
                      "alignItems": "center",
                      "backgroundColor": "transparent",
                      "justifyContent": "center",
                    }
                  }
                >
                  <Text
                    allowFontScaling={false}
                    style={
                      Array [
                        Object {
                          "color": "#242424",
                          "fontSize": 30,
                        },
                        Object {
                          "backgroundColor": "transparent",
                        },
                        Object {
                          "fontFamily": "Ionicons",
                          "fontStyle": "normal",
                          "fontWeight": "normal",
                        },
                        Object {},
                      ]
                    }
                    testID="iconIcon"
                  >
                    
                  </Text>
                </View>
              </View>
            </View>
          </View>
          <View />
          <View
            style={
              Object {
                "alignItems": "center",
                "alignSelf": "center",
                "marginTop": 13.5,
              }
            }
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "#2A2E43",
                    "fontFamily": "Roboto-Regular",
                  },
                  Object {
                    "color": "white",
                    "fontSize": 53.5,
                    "fontWeight": "700",
                  },
                ]
              }
            >
              Account verification
            </Text>
          </View>
          <View
            style={
              Object {
                "justifyContent": "center",
                "marginHorizontal": 75,
              }
            }
          >
            <View>
              <Text
                style={
                  Array [
                    Object {
                      "color": "#2A2E43",
                      "fontFamily": "Roboto-Regular",
                    },
                    Object {
                      "color": undefined,
                      "fontSize": 24,
                      "marginBottom": 4,
                      "marginLeft": 30,
                    },
                  ]
                }
              >
                Employee ID
              </Text>
            </View>
            <View
              style={
                Object {
                  "alignItems": "center",
                  "backgroundColor": undefined,
                  "borderRadius": 30,
                  "height": 86.5,
                  "marginBottom": 22.5,
                  "paddingHorizontal": 10,
                  "width": "100%",
                }
              }
            >
              <View
                style={
                  Object {
                    "alignItems": "center",
                    "borderBottomWidth": 0,
                    "borderColor": "#86939e",
                    "flexDirection": "row",
                    "transform": Array [
                      Object {
                        "translateX": 0,
                      },
                    ],
                    "zIndex": 1,
                  }
                }
              >
                <TextInput
                  allowFontScaling={true}
                  autoCapitalize="none"
                  autoCorrect={false}
                  autoFocus={false}
                  blurOnSubmit={false}
                  editable={false}
                  keyboardAppearance="light"
                  keyboardType="numeric"
                  onBlur={[Function]}
                  onChangeText={[Function]}
                  onFocus={[Function]}
                  onSubmitEditing={[Function]}
                  placeholder="Employee ID"
                  placeholderTextColor="#8FAABF"
                  rejectResponderTermination={true}
                  returnKeyType="default"
                  secureTextEntry={false}
                  style={
                    Object {
                      "alignSelf": "center",
                      "color": "#FFF",
                      "flex": 1,
                      "flexDirection": undefined,
                      "fontFamily": "Roboto-Regular",
                      "fontSize": 29.5,
                      "marginLeft": 22.5,
                      "minHeight": 40,
                      "opacity": 0.5,
                      "width": 600,
                    }
                  }
                  testID="employee-id-input"
                  underlineColorAndroid="transparent"
                  value=""
                />
              </View>
              <Text
                style={
                  Object {
                    "color": "#ff190c",
                    "fontSize": 12,
                    "margin": 5,
                  }
                }
              />
            </View>
            <View
              style={
                Object {
                  "alignItems": "center",
                  "backgroundColor": undefined,
                  "borderRadius": 30,
                  "height": 86.5,
                  "marginBottom": 22.5,
                  "paddingHorizontal": 10,
                  "width": "100%",
                }
              }
            >
              <View
                style={
                  Object {
                    "alignItems": "center",
                    "borderBottomWidth": 0,
                    "borderColor": "#86939e",
                    "flexDirection": "row",
                    "marginTop": -5,
                    "transform": Array [
                      Object {
                        "translateX": 0,
                      },
                    ],
                    "zIndex": 1,
                  }
                }
              >
                <TextInput
                  allowFontScaling={true}
                  autoCapitalize="none"
                  autoCorrect={false}
                  blurOnSubmit={false}
                  editable={true}
                  keyboardAppearance="light"
                  keyboardType="numeric"
                  onBlur={[Function]}
                  onChangeText={[Function]}
                  onFocus={[Function]}
                  placeholder="Email Verification code "
                  placeholderTextColor="#8FAABF"
                  rejectResponderTermination={true}
                  returnKeyType="next"
                  secureTextEntry={false}
                  style={
                    Object {
                      "alignSelf": "center",
                      "color": "#FFF",
                      "flex": 1,
                      "flexDirection": undefined,
                      "fontFamily": "Roboto-Regular",
                      "fontSize": 29.5,
                      "marginLeft": 22.5,
                      "minHeight": 40,
                      "width": 600,
                    }
                  }
                  testID="code-input"
                  underlineColorAndroid="transparent"
                  value="code"
                />
                <View
                  style={
                    Object {
                      "alignItems": "center",
                      "height": 40,
                      "justifyContent": "center",
                      "marginVertical": 4,
                      "paddingRight": 4,
                    }
                  }
                >
                  <View
                    accessible={true}
                    focusable={true}
                    onClick={[Function]}
                    onResponderGrant={[Function]}
                    onResponderMove={[Function]}
                    onResponderRelease={[Function]}
                    onResponderTerminate={[Function]}
                    onResponderTerminationRequest={[Function]}
                    onStartShouldSetResponder={[Function]}
                    style={
                      Object {
                        "opacity": 1,
                      }
                    }
                    testID="show-password-icon"
                  >
                    <<svg xmlns="http://www.w3.org/2000/svg" width="16" height="10.786" viewBox="0 0 16 10.786"><path d="M10.25,7.383a8.6,8.6,0,0,0-8,5.393,8.63,8.63,0,0,0,16,0A8.6,8.6,0,0,0,10.25,7.383Zm0,8.989a3.6,3.6,0,1,1,3.636-3.6A3.626,3.626,0,0,1,10.25,16.372Zm0-5.754a2.157,2.157,0,1,0,2.182,2.157A2.177,2.177,0,0,0,10.25,10.619Z" transform="translate(-2.25 -7.383)"/></svg>
                      fill="#000"
                      height={20}
                      width={20}
                    />
                  </View>
                </View>
              </View>
              <Text
                style={
                  Object {
                    "color": "#ff190c",
                    "fontSize": 12,
                    "margin": 5,
                  }
                }
              />
            </View>
            <View
              style={
                Object {
                  "paddingLeft": 37.5,
                }
              }
            >
              <Text
                style={
                  Array [
                    Object {
                      "color": "#2A2E43",
                      "fontFamily": "Roboto-Regular",
                    },
                    Object {
                      "color": "#FFFFFF",
                      "fontSize": 20,
                    },
                  ]
                }
              >
                wrong code
              </Text>
            </View>
            <View
              style={
                Object {
                  "paddingTop": 53.5,
                }
              }
            >
              <View
                style={
                  Object {
                    "borderRadius": 25,
                    "overflow": "hidden",
                  }
                }
              >
                <View
                  accessibilityRole="button"
                  accessibilityState={
                    Object {
                      "busy": false,
                      "disabled": true,
                    }
                  }
                  accessible={true}
                  focusable={true}
                  onClick={[Function]}
                  onResponderGrant={[Function]}
                  onResponderMove={[Function]}
                  onResponderRelease={[Function]}
                  onResponderTerminate={[Function]}
                  onResponderTerminationRequest={[Function]}
                  onStartShouldSetResponder={[Function]}
                  style={
                    Object {
                      "opacity": 1,
                    }
                  }
                  testID="submit-button"
                >
                  <View
                    style={
                      Object {
                        "alignItems": "center",
                        "backgroundColor": undefined,
                        "borderColor": "#2089dc",
                        "borderRadius": 25,
                        "borderWidth": 0,
                        "flexDirection": "row",
                        "height": 100,
                        "justifyContent": "center",
                        "marginBottom": 26.5,
                        "padding": 8,
                      }
                    }
                  >
                    <Text
                      style={
                        Object {
                          "color": undefined,
                          "fontSize": 30.5,
                          "paddingBottom": 1,
                          "paddingTop": 2,
                          "textAlign": "center",
                        }
                      }
                    >
                      Next
                    </Text>
                  </View>
                </View>
              </View>
            </View>
          </View>
          <View
            style={
              Object {
                "paddingBottom": 40,
              }
            }
          >
            <View
              style={
                Object {
                  "flexDirection": "row",
                  "justifyContent": "center",
                }
              }
            >
              <View
                style={
                  Object {
                    "flex": 1,
                  }
                }
              >
                <View
                  style={
                    Object {
                      "flexDirection": "row",
                      "justifyContent": "center",
                    }
                  }
                >
                  <Text
                    style={
                      Array [
                        Object {
                          "color": "#2A2E43",
                          "fontFamily": "Roboto-Regular",
                        },
                        Object {
                          "color": "#78849E",
                          "fontSize": 22.5,
                        },
                      ]
                    }
                  >
                    By registering you accept our 
                  </Text>
                  <View
                    accessible={true}
                    focusable={true}
                    onClick={[Function]}
                    onResponderGrant={[Function]}
                    onResponderMove={[Function]}
                    onResponderRelease={[Function]}
                    onResponderTerminate={[Function]}
                    onResponderTerminationRequest={[Function]}
                    onStartShouldSetResponder={[Function]}
                    style={
                      Object {
                        "opacity": 1,
                      }
                    }
                    testID="privacy-policy-button"
                  >
                    <Text
                      style={
                        Array [
                          Object {
                            "color": "#2A2E43",
                            "fontFamily": "Roboto-Regular",
                          },
                          Object {
                            "color": "#78849E",
                            "fontSize": 22.5,
                            "textDecorationLine": "underline",
                          },
                        ]
                      }
                    >
                      Privacy Policy
                    </Text>
                  </View>
                </View>
                <View
                  style={
                    Object {
                      "flexDirection": "row",
                      "justifyContent": "center",
                    }
                  }
                >
                  <Text
                    style={
                      Array [
                        Object {
                          "color": "#2A2E43",
                          "fontFamily": "Roboto-Regular",
                        },
                        Object {
                          "color": "#78849E",
                          "fontSize": 22.5,
                        },
                      ]
                    }
                  >
                     and 
                  </Text>
                  <View
                    accessible={true}
                    focusable={true}
                    onClick={[Function]}
                    onResponderGrant={[Function]}
                    onResponderMove={[Function]}
                    onResponderRelease={[Function]}
                    onResponderTerminate={[Function]}
                    onResponderTerminationRequest={[Function]}
                    onStartShouldSetResponder={[Function]}
                    style={
                      Object {
                        "opacity": 1,
                      }
                    }
                    testID="terms-and-condition-button"
                  >
                    <Text
                      style={
                        Array [
                          Object {
                            "color": "#2A2E43",
                            "fontFamily": "Roboto-Regular",
                          },
                          Object {
                            "color": "#78849E",
                            "fontSize": 22.5,
                            "textDecorationLine": "underline",
                          },
                        ]
                      }
                    >
                      Terms & Conditions
                    </Text>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
      </BVLinearGradient>
    </View>
  </RCTScrollView>
</View>
`;

exports[`AccountVerificationScreen snapshot test should render correct ui for AccountVerificationScreen when verificationError is undefined 1`] = `
<View
  onLayout={[Function]}
  style={
    Object {
      "backgroundColor": "#f6f6f6",
      "flex": 1,
      "width": 750,
    }
  }
>
  <RCTScrollView
    collapsable={false}
    contentContainerStyle={
      Object {
        "flex": 1,
      }
    }
    keyboardShouldPersistTaps="handled"
    onGestureHandlerEvent={[Function]}
    onGestureHandlerStateChange={[Function]}
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View>
      <BVLinearGradient
        colors={
          Array [
            4278819773,
            4278213285,
          ]
        }
        endPoint={
          Object {
            "x": 0,
            "y": 1.5,
          }
        }
        locations={
          Array [
            0,
            0.5,
          ]
        }
        startPoint={
          Object {
            "x": 0.1,
            "y": 0,
          }
        }
        style={
          Object {
            "backgroundColor": "#f6f6f6",
            "flex": 1,
            "width": 750,
          }
        }
      >
        <View
          style={
            Object {
              "flex": 1,
              "justifyContent": "space-between",
            }
          }
        >
          <View
            style={
              Object {
                "alignItems": "flex-end",
                "paddingTop": 33.5,
              }
            }
          >
            <View
              style={
                Object {
                  "overflow": "hidden",
                }
              }
            >
              <View
                accessible={true}
                focusable={true}
                onClick={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  Object {
                    "alignItems": "flex-end",
                    "justifyContent": "space-between",
                    "padding": 22.5,
                  }
                }
                testID="exit-button"
              >
                <View
                  style={
                    Object {
                      "alignItems": "center",
                      "backgroundColor": "transparent",
                      "justifyContent": "center",
                    }
                  }
                >
                  <Text
                    allowFontScaling={false}
                    style={
                      Array [
                        Object {
                          "color": "#242424",
                          "fontSize": 30,
                        },
                        Object {
                          "backgroundColor": "transparent",
                        },
                        Object {
                          "fontFamily": "Ionicons",
                          "fontStyle": "normal",
                          "fontWeight": "normal",
                        },
                        Object {},
                      ]
                    }
                    testID="iconIcon"
                  >
                    
                  </Text>
                </View>
              </View>
            </View>
          </View>
          <View />
          <View
            style={
              Object {
                "alignItems": "center",
                "alignSelf": "center",
                "marginTop": 13.5,
              }
            }
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "#2A2E43",
                    "fontFamily": "Roboto-Regular",
                  },
                  Object {
                    "color": "white",
                    "fontSize": 53.5,
                    "fontWeight": "700",
                  },
                ]
              }
            >
              Account verification
            </Text>
          </View>
          <View
            style={
              Object {
                "justifyContent": "center",
                "marginHorizontal": 75,
              }
            }
          >
            <View>
              <Text
                style={
                  Array [
                    Object {
                      "color": "#2A2E43",
                      "fontFamily": "Roboto-Regular",
                    },
                    Object {
                      "color": undefined,
                      "fontSize": 24,
                      "marginBottom": 4,
                      "marginLeft": 30,
                    },
                  ]
                }
              >
                Employee ID
              </Text>
            </View>
            <View
              style={
                Object {
                  "alignItems": "center",
                  "backgroundColor": undefined,
                  "borderRadius": 30,
                  "height": 86.5,
                  "marginBottom": 22.5,
                  "paddingHorizontal": 10,
                  "width": "100%",
                }
              }
            >
              <View
                style={
                  Object {
                    "alignItems": "center",
                    "borderBottomWidth": 0,
                    "borderColor": "#86939e",
                    "flexDirection": "row",
                    "transform": Array [
                      Object {
                        "translateX": 0,
                      },
                    ],
                    "zIndex": 1,
                  }
                }
              >
                <TextInput
                  allowFontScaling={true}
                  autoCapitalize="none"
                  autoCorrect={false}
                  autoFocus={false}
                  blurOnSubmit={false}
                  editable={false}
                  keyboardAppearance="light"
                  keyboardType="numeric"
                  onBlur={[Function]}
                  onChangeText={[Function]}
                  onFocus={[Function]}
                  onSubmitEditing={[Function]}
                  placeholder="Employee ID"
                  placeholderTextColor="#8FAABF"
                  rejectResponderTermination={true}
                  returnKeyType="default"
                  secureTextEntry={false}
                  style={
                    Object {
                      "alignSelf": "center",
                      "color": "#FFF",
                      "flex": 1,
                      "flexDirection": undefined,
                      "fontFamily": "Roboto-Regular",
                      "fontSize": 29.5,
                      "marginLeft": 22.5,
                      "minHeight": 40,
                      "opacity": 0.5,
                      "width": 600,
                    }
                  }
                  testID="employee-id-input"
                  underlineColorAndroid="transparent"
                  value=""
                />
              </View>
              <Text
                style={
                  Object {
                    "color": "#ff190c",
                    "fontSize": 12,
                    "margin": 5,
                  }
                }
              />
            </View>
            <View
              style={
                Object {
                  "alignItems": "center",
                  "backgroundColor": undefined,
                  "borderRadius": 30,
                  "height": 86.5,
                  "marginBottom": 22.5,
                  "paddingHorizontal": 10,
                  "width": "100%",
                }
              }
            >
              <View
                style={
                  Object {
                    "alignItems": "center",
                    "borderBottomWidth": 0,
                    "borderColor": "#86939e",
                    "flexDirection": "row",
                    "marginTop": -5,
                    "transform": Array [
                      Object {
                        "translateX": 0,
                      },
                    ],
                    "zIndex": 1,
                  }
                }
              >
                <TextInput
                  allowFontScaling={true}
                  autoCapitalize="none"
                  autoCorrect={false}
                  blurOnSubmit={false}
                  editable={true}
                  keyboardAppearance="light"
                  keyboardType="numeric"
                  onBlur={[Function]}
                  onChangeText={[Function]}
                  onFocus={[Function]}
                  placeholder="Email Verification code "
                  placeholderTextColor="#8FAABF"
                  rejectResponderTermination={true}
                  returnKeyType="next"
                  secureTextEntry={false}
                  style={
                    Object {
                      "alignSelf": "center",
                      "color": "#FFF",
                      "flex": 1,
                      "flexDirection": undefined,
                      "fontFamily": "Roboto-Regular",
                      "fontSize": 29.5,
                      "marginLeft": 22.5,
                      "minHeight": 40,
                      "width": 600,
                    }
                  }
                  testID="code-input"
                  underlineColorAndroid="transparent"
                  value="code"
                />
                <View
                  style={
                    Object {
                      "alignItems": "center",
                      "height": 40,
                      "justifyContent": "center",
                      "marginVertical": 4,
                      "paddingRight": 4,
                    }
                  }
                >
                  <View
                    accessible={true}
                    focusable={true}
                    onClick={[Function]}
                    onResponderGrant={[Function]}
                    onResponderMove={[Function]}
                    onResponderRelease={[Function]}
                    onResponderTerminate={[Function]}
                    onResponderTerminationRequest={[Function]}
                    onStartShouldSetResponder={[Function]}
                    style={
                      Object {
                        "opacity": 1,
                      }
                    }
                    testID="show-password-icon"
                  >
                    <<svg xmlns="http://www.w3.org/2000/svg" width="16" height="10.786" viewBox="0 0 16 10.786"><path d="M10.25,7.383a8.6,8.6,0,0,0-8,5.393,8.63,8.63,0,0,0,16,0A8.6,8.6,0,0,0,10.25,7.383Zm0,8.989a3.6,3.6,0,1,1,3.636-3.6A3.626,3.626,0,0,1,10.25,16.372Zm0-5.754a2.157,2.157,0,1,0,2.182,2.157A2.177,2.177,0,0,0,10.25,10.619Z" transform="translate(-2.25 -7.383)"/></svg>
                      fill="#000"
                      height={20}
                      width={20}
                    />
                  </View>
                </View>
              </View>
              <Text
                style={
                  Object {
                    "color": "#ff190c",
                    "fontSize": 12,
                    "margin": 5,
                  }
                }
              />
            </View>
            <View
              style={
                Object {
                  "paddingTop": 53.5,
                }
              }
            >
              <View
                style={
                  Object {
                    "borderRadius": 25,
                    "overflow": "hidden",
                  }
                }
              >
                <View
                  accessibilityRole="button"
                  accessibilityState={
                    Object {
                      "busy": false,
                      "disabled": true,
                    }
                  }
                  accessible={true}
                  focusable={true}
                  onClick={[Function]}
                  onResponderGrant={[Function]}
                  onResponderMove={[Function]}
                  onResponderRelease={[Function]}
                  onResponderTerminate={[Function]}
                  onResponderTerminationRequest={[Function]}
                  onStartShouldSetResponder={[Function]}
                  style={
                    Object {
                      "opacity": 1,
                    }
                  }
                  testID="submit-button"
                >
                  <View
                    style={
                      Object {
                        "alignItems": "center",
                        "backgroundColor": undefined,
                        "borderColor": "#2089dc",
                        "borderRadius": 25,
                        "borderWidth": 0,
                        "flexDirection": "row",
                        "height": 100,
                        "justifyContent": "center",
                        "marginBottom": 26.5,
                        "padding": 8,
                      }
                    }
                  >
                    <Text
                      style={
                        Object {
                          "color": undefined,
                          "fontSize": 30.5,
                          "paddingBottom": 1,
                          "paddingTop": 2,
                          "textAlign": "center",
                        }
                      }
                    >
                      Next
                    </Text>
                  </View>
                </View>
              </View>
            </View>
          </View>
          <View
            style={
              Object {
                "paddingBottom": 40,
              }
            }
          >
            <View
              style={
                Object {
                  "flexDirection": "row",
                  "justifyContent": "center",
                }
              }
            >
              <View
                style={
                  Object {
                    "flex": 1,
                  }
                }
              >
                <View
                  style={
                    Object {
                      "flexDirection": "row",
                      "justifyContent": "center",
                    }
                  }
                >
                  <Text
                    style={
                      Array [
                        Object {
                          "color": "#2A2E43",
                          "fontFamily": "Roboto-Regular",
                        },
                        Object {
                          "color": "#78849E",
                          "fontSize": 22.5,
                        },
                      ]
                    }
                  >
                    By registering you accept our 
                  </Text>
                  <View
                    accessible={true}
                    focusable={true}
                    onClick={[Function]}
                    onResponderGrant={[Function]}
                    onResponderMove={[Function]}
                    onResponderRelease={[Function]}
                    onResponderTerminate={[Function]}
                    onResponderTerminationRequest={[Function]}
                    onStartShouldSetResponder={[Function]}
                    style={
                      Object {
                        "opacity": 1,
                      }
                    }
                    testID="privacy-policy-button"
                  >
                    <Text
                      style={
                        Array [
                          Object {
                            "color": "#2A2E43",
                            "fontFamily": "Roboto-Regular",
                          },
                          Object {
                            "color": "#78849E",
                            "fontSize": 22.5,
                            "textDecorationLine": "underline",
                          },
                        ]
                      }
                    >
                      Privacy Policy
                    </Text>
                  </View>
                </View>
                <View
                  style={
                    Object {
                      "flexDirection": "row",
                      "justifyContent": "center",
                    }
                  }
                >
                  <Text
                    style={
                      Array [
                        Object {
                          "color": "#2A2E43",
                          "fontFamily": "Roboto-Regular",
                        },
                        Object {
                          "color": "#78849E",
                          "fontSize": 22.5,
                        },
                      ]
                    }
                  >
                     and 
                  </Text>
                  <View
                    accessible={true}
                    focusable={true}
                    onClick={[Function]}
                    onResponderGrant={[Function]}
                    onResponderMove={[Function]}
                    onResponderRelease={[Function]}
                    onResponderTerminate={[Function]}
                    onResponderTerminationRequest={[Function]}
                    onStartShouldSetResponder={[Function]}
                    style={
                      Object {
                        "opacity": 1,
                      }
                    }
                    testID="terms-and-condition-button"
                  >
                    <Text
                      style={
                        Array [
                          Object {
                            "color": "#2A2E43",
                            "fontFamily": "Roboto-Regular",
                          },
                          Object {
                            "color": "#78849E",
                            "fontSize": 22.5,
                            "textDecorationLine": "underline",
                          },
                        ]
                      }
                    >
                      Terms & Conditions
                    </Text>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
      </BVLinearGradient>
    </View>
  </RCTScrollView>
</View>
`;
